routeTable.tf
resource "aws_route_table" "scandiRouteTable" {
  vpc_id = aws_vpc.scandiVpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.scandiIG.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.scandiIG.id
  }

  tags = {
    Name = "Scandi Route Table"
  }
}

resource "aws_route_table_association" "RTAssoc" {
  subnet_id      = aws_subnet.scandiSubnet.id
  route_table_id = aws_route_table.scandiRouteTable.id
}
