vpc.tf
resource "aws_vpc" "scandiVpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "Scandi VPC"
  }
}
